Wiki nginx max body size to 2mb.

--- a/cookbooks/wiki/files/default/proxy/wiki.conf
+++ b/cookbooks/wiki/files/default/proxy/wiki.conf
@@ -1,6 +1,8 @@
 server {
     server_name apilytic.org;
 
+    client_max_body_size 2M;
+    
     location / {
         include uwsgi_params;
         uwsgi_pass unix:///home/www/moin/wiki.sock;
