--- a/cookbooks/lytc/Rakefile
+++ b/cookbooks/lytc/Rakefile
@@ -39,3 +39,15 @@ begin
 rescue LoadError => e
   puts ">>> Gem load error: #{e}, omitting spec" unless ENV['CI']
 end
+
+# Integration tests. Kitchen.ci
+namespace :integration do
+  begin
+    require 'kitchen/rake_tasks'
+
+    desc 'Run kitchen integration tests'
+    Kitchen::RakeTasks.new
+  rescue LoadError, StandardError => e
+    puts ">>> Gem load error: #{e}, omitting #{task.name}" unless ENV['CI']
+  end
+end
