Run correct docker-compose conf for magento. Update nginx proxy to container.

--- a/cookbooks/sklad1/files/default/proxy/magento.conf
+++ b/cookbooks/sklad1/files/default/proxy/magento.conf
@@ -3,4 +3,8 @@ server {
 
     client_max_body_size 2M;
 
+    location / {
+                access_log off;
+                proxy_pass http://localhost:32770;
+     }
 }
