--- a/cookbooks/sklad1/files/default/magento/docker-compose.yml
+++ b/cookbooks/sklad1/files/default/magento/docker-compose.yml
@@ -1,33 +1,103 @@
-web:
-  image: meanbee/magento:7.0-apache
-  hostname: magento.docker
-  environment:
-    - DOCKER_FIX=
-    - VIRTUAL_HOST=magento.docker
-    - ENABLE_SENDMAIL=true
-  volumes:
-    - ./src:/var/www/html
-  ports:
-    - 80
-    - 443
-  links:
-    - db
+version: "2"
+services:
+#  varnish:
+#    image: meanbee/magento2-varnish:latest
+#    environment:
+#      - VIRTUAL_HOST=magento2.docker
+#      - VIRTUAL_PORT=80
+#      - HTTPS_METHOD=noredirect
+#    ports:
+#      - 80
+#    links:
+#      - web
 
-db:
-  image: mysql/mysql-server:5.6
-  environment:
-    - MYSQL_ROOT_PASSWORD=root
-    - MYSQL_DATABASE=magento
-  ports:
-    - 3306
+  web:
+    image: meanbee/magento2-nginx:1.9
+    ports:
+      - 80
+    links:
+      - fpm
+      - db
+    volumes_from:
+      - appdata
+    env_file:
+      - ./global.env
+    environment:
+      - VIRTUAL_HOST=magento2.docker
+      - VIRTUAL_PORT=80
+      - HTTPS_METHOD=noredirect
 
-cron:
-  image: meanbee/magento:7.0-cli
-  hostname: magento-cron.docker
-  command: /run-cron.sh
-  environment:
-    - ENABLE_SENDMAIL=true
-  volumes:
-    - ./src:/var/www/html
-  links:
-    - db
+  fpm:
+    hostname: fpm.magento2.docker
+    image: meanbee/magento2-php:7.0-fpm
+    ports:
+      - 9000
+    links:
+      - db
+    volumes_from:
+      - appdata
+    env_file:
+      - ./global.env
+
+  db:
+    image: mariadb:10
+    ports:
+      - 3306
+    volumes_from:
+      - dbdata
+    environment:
+      - MYSQL_ROOT_PASSWORD=magento2
+      - MYSQL_DATABASE=magento2
+      - MYSQL_USER=magento2
+      - MYSQL_PASSWORD=magento2
+      - TERM=meh
+
+  cli:
+    hostname: cli.magento2.docker
+    image: meanbee/magento2-php:7.0-cli
+    links:
+      - db
+    volumes:
+      - ~/.composer/cache:/root/.composer/cache
+    volumes_from:
+      - appdata
+    env_file:
+      - ./global.env
+      - ./composer.env
+    environment:
+      - M2SETUP_INSTALL_DB=true
+      - M2SETUP_DB_HOST=db
+      - M2SETUP_DB_NAME=magento2
+      - M2SETUP_DB_USER=magento2
+      - M2SETUP_DB_PASSWORD=magento2
+      - M2SETUP_BASE_URL=http://magento2.docker/
+      # - M2SETUP_SECURE_BASE_URL=https://magento2.docker/
+      - M2SETUP_BACKEND_FRONTNAME=admin
+      - M2SETUP_ADMIN_FIRSTNAME=Admin
+      - M2SETUP_ADMIN_LASTNAME=User
+      - M2SETUP_ADMIN_EMAIL=dummy@gmail.com
+      - M2SETUP_ADMIN_USER=admin
+      - M2SETUP_ADMIN_PASSWORD=password1
+      - M2SETUP_VERSION=2.1.*
+      # - M2SETUP_USE_SAMPLE_DATA=true
+
+  cron:
+    image: meanbee/magento2-php:7.0-cli
+    hostname: magento2-cron.docker
+    command: run-cron
+    environment:
+      - ENABLE_SENDMAIL=true
+    volumes_from:
+      - appdata
+    links:
+      - db
+
+  appdata:
+    image: tianon/true
+    volumes:
+      - ./magento:/var/www/magento
+
+  dbdata:
+    image: tianon/true
+    volumes:
+      - /var/lib/mysql
