--- a/cookbooks/sklad1/files/default/magento/docker-compose.yml
+++ b/cookbooks/sklad1/files/default/magento/docker-compose.yml
@@ -95,7 +95,7 @@ services:
   appdata:
     image: tianon/true
     volumes:
-      - ./magento:/var/www/magento
+      - ./src:/var/www/magento
 
   dbdata:
     image: tianon/true
