--- a/cookbooks/sklad1/files/default/magento/docker-compose.yml
+++ b/cookbooks/sklad1/files/default/magento/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "2"
 services:
-#  varnish:
-#    image: meanbee/magento2-varnish:latest
-#    environment:
-#      - VIRTUAL_HOST=magento2.docker
-#      - VIRTUAL_PORT=80
-#      - HTTPS_METHOD=noredirect
-#    ports:
-#      - 80
-#    links:
-#      - web
+  varnish:
+    image: meanbee/magento2-varnish:latest
+    environment:
+      - VIRTUAL_HOST=magento2.docker
+      - VIRTUAL_PORT=80
+      - HTTPS_METHOD=noredirect
+    ports:
+      - 80
+    links:
+      - web
 
   web:
     image: meanbee/magento2-nginx:1.9
@@ -22,10 +22,10 @@ services:
       - appdata
     env_file:
       - ./global.env
-    environment:
-      - VIRTUAL_HOST=magento2.docker
-      - VIRTUAL_PORT=80
-      - HTTPS_METHOD=noredirect
+    #environment:
+      #- VIRTUAL_HOST=magento2.docker
+      #- VIRTUAL_PORT=80
+      #- HTTPS_METHOD=noredirect
 
   fpm:
     hostname: fpm.magento2.docker
