--- a/cookbooks/sklad1/files/default/proxy/magento.conf
+++ b/cookbooks/sklad1/files/default/proxy/magento.conf
@@ -6,10 +6,9 @@ server {
     location / {
                 access_log off;
 
-                proxy_set_header   Host             $host;
                 proxy_set_header   X-Real-IP        $remote_addr;
                 proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-                proxy_pass http://localhost:32776;
+                proxy_pass http://shop.sklad1.bg:32770;
      }
 }
