Support for admin login via reverse proxy.

--- a/cookbooks/sklad1/files/default/proxy/magento.conf
+++ b/cookbooks/sklad1/files/default/proxy/magento.conf
@@ -3,12 +3,21 @@ server {
 
     client_max_body_size 2M;
 
-    location / {
-                access_log off;
+    location ^~ /admin_ {
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header   Host             $host;
 
-                proxy_set_header   X-Real-IP        $remote_addr;
-                proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-
-                proxy_pass http://shop.sklad1.bg:32770;
+        proxy_pass http://localhost:32770;
      }
+
+     location / {
+        access_log off;
+
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+        proxy_pass http://shop.sklad1.bg:32770;
+     }
+
 }
