Multiple magento installations.

--- a/cookbooks/sklad1/files/default/proxy/magento.conf
+++ b/cookbooks/sklad1/files/default/proxy/magento.conf
@@ -21,3 +21,27 @@ server {
      }
 
 }
+
+server {
+    server_name porto.sklad1.bg;
+
+    client_max_body_size 2M;
+
+    location ^~ /admin_ {
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header   Host             $host;
+
+        proxy_pass http://localhost:32774;
+     }
+
+     location / {
+        access_log off;
+
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+        proxy_pass http://porto.sklad1.bg:32774;
+     }
+
+}
