--- a/cookbooks/sklad1/files/default/proxy/magento.conf
+++ b/cookbooks/sklad1/files/default/proxy/magento.conf
@@ -27,6 +27,27 @@ server {
 
     client_max_body_size 2M;
 
+    gzip on;
+    gzip_disable "msie6";
+
+    gzip_comp_level 7;
+    gzip_min_length 1100;
+    gzip_buffers 16 8k;
+    gzip_proxied any;
+    gzip_types
+        text/plain
+        text/css
+        text/js
+        text/xml
+        text/javascript
+        application/javascript
+        application/x-javascript
+        application/json
+        application/xml
+        application/xml+rss
+        image/svg+xml;
+    gzip_vary on;
+
     location ^~ /admin_ {
         proxy_set_header   X-Real-IP        $remote_addr;
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
