Conf for blufoxy site.

--- a/cookbooks/blufoxy/files/default/proxy/blufoxy.conf
+++ b/cookbooks/blufoxy/files/default/proxy/blufoxy.conf
@@ -2,7 +2,7 @@ server {
 	server_name blufoxy.com;
 
 	location ~ ^/(images|javascript|js|css|flash|media|static)/  {
-   		root    /home/www/moin/zikraft/assets;
+   		root    /var/www/blufoxy/assets;
    		expires 30d;
    	}
 
