--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ branches:
 services: docker
 
 env:
+  global:
+    - CHEF_LICENSE="accept"
   matrix:
     - INSTANCE=debian-8
     - INSTANCE=centos-7
